[devkit] IJPL-189601 enabling native access in local dev runs on Java 25+
GitOrigin-RevId: 86e33153ba7b3b13c4d365bcef581df5727adaf5